--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "handlebars": "^4.7.7",
         "jquery": "^3.6.0",
+        "lite-server": "^2.6.1",
         "sammy": "^0.7.6"
     }
 }
